<resources>
    <string name="app_name">Learning Resources</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="don_t_have_an_account_sign_in">¿No tienes una cuenta? Registrarse</string>
    <string name="already_have_an_account_login">¿Ya tienes una cuenta? Iniciar Sesión</string>
    <string name="signed">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="add_resource">Agregar recurso</string>
    <string name="resources">Recursos</string>
    <string name="filter">Filtrar</string>
    <string name="title">Título</string>
    <string name="title_of_resource">Título del recurso</string>
    <string name="descripion">Descripción</string>
    <string name="description_of_resource">Descripción del recurso</string>
    <string name="type">Tipo</string>
    <string name="type_resource">Tipo de recurso</string>
    <string name="link">Link</string>
    <string name="url_resource">URL del recurso</string>
    <string name="url_img">URL de la Imagen</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="img_resource">Imagen del recurso</string>
    <string name="go_resource">Ir al recurso</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
</resources>