<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/title_of_resource"
            android:inputType="textPersonName"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripion"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_of_resource"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etLink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/url_resource"
            android:inputType="textUri"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_img"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etImage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/url_img"
            android:inputType="textUri"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_resource"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:padding="12dp"/>

    </LinearLayout>
</ScrollView>
